# webMLAssistantTeam2

./: .gitignore  Dockerfile  README.md  deployer.json  docker-compose.yml  env.sample  gunicorn-cfg.py  manage.py  pyproject.toml  requirements.txt  vercel.json  vercel_build.sh
apps/authentication/: urls.py  views.py
apps/contacts/: admin.py  forms.py  models.py  urls.py  views.py
apps/contacts/migrations/: 0001_initial.py  0002_alter_contact_phone_number.py
apps/home/: config.py  models.py  urls.py  views.py
apps/news/: models.py  urls.py  views.py
apps/news/crawlers/: scrapynews.py
apps/news/migrations/: 0001_initial.py
apps/noteapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/noteapp/migrations/: 0001_initial.py  0002_note_user.py  0003_tag_user_alter_note_user_tag_tag of username.py  0004_remove_tag_tag of username_alter_tag_name.py
apps/static/: sitemap.xml
apps/storage/: models.py  urls.py  views.py  сonstans.py
apps/storage/migrations/: 0001_initial.py  0002_remove_file_file.py  0003_file_size.py  (+2 more)
core/: asgi.py  custom-auth-backend.py  settings.py  urls.py  wsgi.py
model/: CIFAR10_InceptionResNetV2_(ACC_0_9705__LOSS_0_0233__).ipynb  CIFAR10_InceptionV3_(ACC_0_9628_LOSS_0_1097_).ipynb  CIFAR10_Xception_(ACC_0_9704__LOSS_0_0335_).ipynb  GPT2_keras_v2.ipynb  Project_cifar_10_VGG16(ACC_0_8917__LOSS_0_3432_).ipynb  Project_cifar_10_VGG19(ACC_0_898__LOSS_0_346_).ipynb
models/: CIFAR10_EfficientNetV2M_(ACC_98.32_LOSS_0.07).ipynb  CIFAR10_EfficientNetV2S_SGDsyntetic_(ACC_98.05_LOSS_0.08.ipynb
nginx/: assistant-app.conf
(+37 files in other folders)
